[package]
name = "tptp"
description = "Parse the TPTP format"
edition = "2018"
version = "0.22.0"
authors = ["Michael Rawson <michael@rawsons.uk>"]
license = "MIT"
homepage = "https://github.com/MichaelRawson/tptp"
readme = "README.md"
keywords = ["parser", "tptp"]
include = [
	"Cargo.toml",
	"src/*.rs",
]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["as_ref", "from", "display"]

[dependencies.nom]
version = "5.1"
features = ["lexical"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
insta = "0.16"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
debug = true

[[bench]]
path = "benches/benchmark.rs"
name = "benchmark"
harness = false
