[package]
name = "tptp"
description = "Parse the TPTP format"
edition = "2018"
version = "0.29.1"
authors = ["Michael Rawson <michael@rawsons.uk>"]
license = "MIT"
homepage = "https://github.com/MichaelRawson/tptp"
readme = "README.md"
keywords = ["parser", "tptp"]
include = [
	"Cargo.toml",
	"src/*.rs",
]

[dependencies.nom]
version = "6"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dev-dependencies]
insta = "1"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
path = "benches/benchmark.rs"
name = "benchmark"
harness = false
